seedboxk8s/applications/authelia/Middleware.authelia.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: authelia
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
      - X-Forwarded-User
      - X-Forwarded-Groups
      - X-Forwarded-Email
      - X-Forwarded-Name
