seedboxk8s/applications/authelia/Deployment.authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.39.28
          command:
            - authelia
          args:
            - --config=/configuration.yaml
          ports:
            - name: http
              containerPort: 9091
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /api/health
              port: http
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 30
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config-file
              mountPath: /configuration.yaml
              readOnly: true
              subPath: configuration.yaml
            - name: users
              mountPath: /users/users.yml
              readOnly: true
              subPath: users.yml
            - name: config
              mountPath: /config
            - name: assets
              mountPath: /config/assets
              readOnly: true
            - name: redict-secret
              mountPath: /redict-secret
              readOnly: true
            - name: secrets
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: config-file
          configMap:
            name: authelia
            items:
              - key: configuration.yaml
                path: configuration.yaml
        - name: users
          configMap:
            name: authelia-users
        - name: config
          persistentVolumeClaim:
            claimName: authelia-config
        - name: assets
          configMap:
            name: authelia-assets
        - name: redict-secret
          secret:
            secretName: redict-secret
        - name: secrets
          secret:
            secretName: authelia
