seedboxk8s/applications/authelia/Deployment.whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami-authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami-authelia
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.12.0
          ports:
            - name: http
              containerPort: 80
