seedboxk8s/applications/authelia/StatefulSet.redict.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redict
  namespace: authelia
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: redict-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redict
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redict
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: redict
          image: registry.redict.io/redict:7
          command:
            - redict-server
            - /redict-config/redict.conf
          ports:
            - name: redict
              containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: redict-data
              mountPath: /data
            - name: redict-secret
              mountPath: /redict-secret
              readOnly: true
            - name: redict-config
              mountPath: /redict-config
              readOnly: true
      volumes:
        - name: redict-secret
          secret:
            secretName: redict-secret
        - name: redict-config
          configMap:
            name: redict-config
  volumeClaimTemplates:
    - metadata:
        name: redict-data
        annotations:
          backup.seedboxk8s.micahrl.com/enabled: "true"
          backup.seedboxk8s.micahrl.com/flux-kustomization: authelia
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: seedbox-bootdisk-fast-single
        resources:
          requests:
            storage: 1Gi
