seedboxk8s/applications/authelia/Service.authelia.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
