seedboxk8s/applications/authelia/Service.redict-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redict-headless
  namespace: authelia
  labels:
    app.kubernetes.io/name: redict
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redict
  ports:
    - name: redict
      port: 6379
      targetPort: redict
