seedboxk8s/applications/authelia/Service.redict.yaml
apiVersion: v1
kind: Service
metadata:
  name: redict
  namespace: authelia
  labels:
    app.kubernetes.io/name: redict
spec:
  selector:
    app.kubernetes.io/name: redict
  ports:
    - name: redict
      port: 6379
      targetPort: redict
  type: ClusterIP
