seedboxk8s/applications/authelia/Service.whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-authelia
  namespace: authelia
spec:
  selector:
    app: whoami-authelia
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
