seedboxk8s/applications/authelia/IngressRoute.whoami.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-authelia
  namespace: authelia
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami-authelia.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: whoami-authelia
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: seedbox-wildcard-backing-secret
