seedboxk8s/applications/authelia/NetworkPolicy.allow-authelia-to-redict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-to-redict
  namespace: authelia
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redict
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: authelia
    ports:
    - port: 6379
      protocol: TCP
