seedboxk8s/applications/authelia/NetworkPolicy.allow-traefik-to-authelia.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-authelia
  namespace: authelia
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - port: 80
      protocol: TCP
