seedboxk8s/applications/authelia/NetworkPolicy.default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: authelia
spec:
  podSelector: {}
  policyTypes:
  - Ingress
